--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #f0f0f0;
+    background-color: #000;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -13,28 +13,29 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 2px solid black;
+    border: 2px solid #fff;
     border-radius: 10px;
-    background-color: white;
+    background-color: #111;
     padding: 20px;
 }
 
 canvas {
-    border: 1px solid black;
+    border: 1px solid #fff;
 }
 
 #scoreboard {
     margin-top: 10px;
-    font-size: 24px;
+    font-size: 16px;
+    color: #fff;
 }
 
 #restart-btn {
     margin-top: 20px;
-    background-color: forestgreen;
-    color: whitesmoke;
+    background-color:#00FF00 #00FF00;
+    color: #000;
     border-radius: 5px;
     padding: 10px 20px;
     border: none;
     cursor: pointer;
-    font-size: 18px;
+    font-size: 14px;
 }
