--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body {
     align-items: center;
     border: 2px solid #fff;
     border-radius: 10px;
-    background-color: #111;
+    background-color: #000;
     padding: 20px;
 }
 
@@ -31,11 +31,55 @@ canvas {
 
 #restart-btn {
     margin-top: 20px;
-    background-color:#00FF00 #00FF00;
+    background-color: #0F9216;
     color: #000;
     border-radius: 5px;
     padding: 10px 20px;
     border: none;
     cursor: pointer;
     font-size: 14px;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 9999;
+}
+
+.modal-content {
+    background-color: #fff;
+    border-radius: 10px;
+    padding: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    text-align: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    max-width: 300px;
+    transform: translate(-50%, -50%);
+}
+
+.modal h2 {
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+
+.modal p {
+    font-size: 16px;
+    margin-bottom: 20px;
+}
+
+.modal button {
+    background-color: #00FF00;
+    color: #000;
+    border-radius: 5px;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
 }
